# spatialist

./: .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  appveyor.yml  environment-doc.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  spatialist_tutorial.ipynb
.github/workflows/: python-package-conda.yml  python-publish.yml
docs/: changelog.rst  conf.py  index.rst  installation.rst  spatialist.rst
docs/_extensions/: list_drivers.py  osgeo_links.py
docs/source/: changelog.rst  conf.py  examples.rst  index.rst  spatialist.rst
docs/source/_extensions/: epsg_links.py
docs/source/api/: ancillary.rst  database.rst  envi.rst  raster.rst  spatial.rst  vector.rst
spatialist/: __init__.py  ancillary.py  auxil.py  drivers_vector.yml  envi.py  explorer.py  multicore_helper.py  raster.py  sqlite_util.py  vector.py
spatialist/tests/: conftest.py  test_ancillary.py  test_spatial.py
spatialist/tests/data/: S1A__IW___A_20150309T173017_VV_grd_mli_geo_norm_db.tif.aux.xml  S1A__IW___D_20170309T054356_VV_grd_mli_geo_norm_db.tif  S1A__IW___D_20171210T054359_VV_grd_mli_geo_norm_db.tif  demo_finder.tar.xz
tutorial_data/: S1_GRD_VV_France_Camargue_2017-01-01_2017-12-31.aux.xml  S1_GRD_VV_France_Camargue_2017-01-01_2017-12-31.hdr  subset.dbf  subset.shp  subset.shx  subset2.dbf  subset2.shp  subset2.shx
