[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]

[project]
name = "spatialist"
description = "a Python module for spatial data handling"
requires-python = ">=3.5"
license = { file = "LICENSE.txt" }
maintainers = [
    { name = "John Truckenbrodt", email = "john.truckenbrodt@dlr.de" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"
]
dynamic = ["version", "readme", "dependencies"]

[project.urls]
repository = "https://github.com/johntruckenbrodt/pyroSAR"
documentation = "https://pyrosar.readthedocs.io/en/latest/"

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx", "sphinxcontrib-bibtex<2.0.0"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
readme = { file = ["README.md"] }

[tool.setuptools_scm]
