[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]

[project]
name = "spatialist"
description = "a Python module for spatial data handling"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
maintainers = [
    { name = "John Truckenbrodt", email = "john.truckenbrodt@dlr.de" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"
]
dynamic = ["version", "readme", "dependencies"]

[project.urls]
repository = "https://github.com/johntruckenbrodt/spatialist"
documentation = "https://spatialist.readthedocs.io/en/latest/"

[project.optional-dependencies]
test = ["pytest"]
docs = ["sphinx"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools_scm]
